#307 build runs with jdk18